# Small_Program

./: README.md
data_sharing/: README  build_android.sh  build_macOs.sh  build_windows.ps1  go.mod
data_sharing/client/: go.mod
data_sharing/client/buildConfig/: buildConfig.go
data_sharing/client/clipboard/: clipboard.go
data_sharing/client/cmd/: client_cmd.go
data_sharing/client/common/: common.go
data_sharing/client/connection/: connection.go  mdnsConnection.go
data_sharing/client/debug/: debug.go
data_sharing/client/filedrop/: filedrop.go
data_sharing/client/global/: const.go  var.go
data_sharing/client/main/: .ID  .priv.pem  client_main.go
data_sharing/client/mdns/: flags.go  mdns.go
data_sharing/client/p2p/: p2p.go
data_sharing/client/platform/: android.go  macOs.go  windows_cgo.go
data_sharing/client/relay/: relay.go
data_sharing/client/utils/: Image.go  (+3 more)
data_sharing/clipboard/: clipboard.cpp
data_sharing/clipboard_java/: README
data_sharing/document/: Copy_Paste_Flow.vsdx  FileDrop.vsdx
data_sharing/server/: relayServer.go
data_sharing/windows/CrossShareWindowsClient/windows_clipboard/: CMakeLists.txt
data_sharing/windows/CrossShareWindowsClient/windows_clipboard/common/: CMakeLists.txt  buffer.cpp  buffer.h  common_signals.cpp  common_signals.h  common_utils.cpp  common_utils.h  global_def.cpp  global_def.h  namedpipe_client.cpp  namedpipe_client.h  process_message.cpp  process_message.h  worker_thread.cpp  worker_thread.h
data_sharing/windows/CrossShareWindowsClient/windows_clipboard/common-ui/: CMakeLists.txt  common_proxy_style.cpp  common_proxy_style.h  common_ui_process.cpp  common_ui_process.h
data_sharing/windows/CrossShareWindowsClient/windows_clipboard/src/: CMakeLists.txt  accept_file_dialog.cpp  accept_file_dialog.h  accept_file_dialog.ui  device_info.cpp  device_info.h  device_info.ui  device_info_list.cpp  device_info_list.h  device_info_list.ui  device_list_dialog.cpp  device_list_dialog.h  device_list_dialog.ui  flowlayout.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  progress_bar_dialog.cpp  progress_bar_dialog.h  progress_bar_dialog.ui  res.qrc
data_sharing/windows/CrossShareWindowsClient/windows_clipboard/src/resource/: ico.rc  my.qss
data_sharing/windows/CrossShareWindowsClient/windows_clipboard/test/: CMakeLists.txt  test_message_parse.cpp  test_qstring.cpp
data_sharing/windows/CrossShareWindowsClient/windows_clipboard/test-server/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  server.h
http_multi_download/: Makefile  README.md  main.cpp
http_multi_download/common/: kdeque.hpp
http_multi_download/include/: CurlHttpTask.h  DownLoadFactory.h  TaskBase.h  ThreadPool.h
http_multi_download/src/: CurlHttpTask.cpp  DownLoadFactory.cpp  ThreadPool.cpp
(+39 files in other folders)
